@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,6 +30,6 @@ public class isobsolete003b {
 
     static Integer foo(int i) {
         int dummyInt = i;
-        return new Integer(i);  // isobsolete003.brkpFooLineNumber
+        return Integer.valueOf(i);  // isobsolete003.brkpFooLineNumber
     }
 }
